# docs/swagger.json
@@ -449,6 +449,11 @@
         },
         "/api/faqs": {
             "get": {
+                "security": [
+                    {
+                        "OAuth2AccessCode": []
+                    }
+                ],
                 "description": "Возвращает список FAQ с пагинацией и фильтрацией",
                 "produces": [
                     "application/json"
@@ -1568,6 +1573,21 @@
                     "minLength": 10,
                     "example": "Как подать налоговую декларацию?"
                 }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "OAuth2AccessCode": {
+            "type": "oauth2",
+            "flow": "accessCode",
+            "authorizationUrl": "http://localhost:8080/realms/master/protocol/openid-connect/auth",
+            "tokenUrl": "http://localhost:8080/realms/master/protocol/openid-connect/token",
+            "scopes": {
+                "api:read": "Read access to API",
+                "api:write": "Write access to API",
+                "email": "User email information",
+                "openid": "OpenID Connect",
+                "profile": "User profile information"
             }
         }
     }
